Fixed checkbox appearance on safari

--- a/src/style.css
+++ b/src/style.css
@@ -241,7 +241,7 @@ body {
 
 .todo-check {
     appearance: none;
-    -webkit-appearence: none;
+    -webkit-appearance: none;
     width: 25px;
     height: 25px;
     border-radius: 50%;
